# atp-Tom

./: .gitignore  CMakeLists.txt  LICENSE  README.md  actuator_bindings.cp38-win_amd64.pyd  bindings.cpp  main.py  sensor_bindings.cp38-win_amd64.pyd  sensors.cpp  sensors.hpp  setup.py  setup_actuators.py  setup_sensors.py  timing.py
code/: Functional.py  actuator.cpp  actuator.hpp  actuator_bindings.cp38-win_amd64.pyd  actuator_bindings.cpp  bindings.cpp  controller.py  decorators.py  main.py  sensor_bindings.cp38-win_amd64.pyd  sensor_bindings.cpp  sensors.cpp  sensors.hpp  setup.py  sim.py  test_controller.py  test_report.md  tests.py
code/test_cases/: test actuatoren.py  test_controller.py  test_sensoren.py
